<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saraighatsoftware.flexicalculator.ConverterFragment">

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spinner_vertical_margin"
        android:layout_marginBottom="@dimen/spinner_vertical_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_swap"
            android:contentDescription="@string/swap"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_swap"
            style="?android:attr/buttonBarButtonStyle" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/space_margin" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <HorizontalScrollView
                android:id="@+id/scroll_display_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/display">

                <TextView
                    android:id="@+id/text_display_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/appbar_padding_top"
                    android:paddingBottom="@dimen/display_padding_bottom"
                    android:paddingLeft="@dimen/display_padding_left"
                    android:paddingRight="@dimen/display_padding_right"
                    android:paddingStart="@dimen/display_padding_left"
                    android:paddingEnd="@dimen/display_padding_right"
                    android:gravity="center_vertical"
                    android:layout_gravity="end"
                    android:includeFontPadding="true"
                    android:textSize="@dimen/display_font_size"
                    android:textColor="@color/colorCalcText"/>

            </HorizontalScrollView>

            <Spinner
                android:id="@+id/spinner_input_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spinner_vertical_margin"
                android:layout_marginBottom="@dimen/spinner_vertical_margin" />

            <HorizontalScrollView
                android:id="@+id/scroll_display_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/display">

                <TextView
                    android:id="@+id/text_display_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/appbar_padding_top"
                    android:paddingBottom="@dimen/display_padding_bottom"
                    android:paddingLeft="@dimen/display_padding_left"
                    android:paddingRight="@dimen/display_padding_right"
                    android:paddingStart="@dimen/display_padding_left"
                    android:paddingEnd="@dimen/display_padding_right"
                    android:gravity="center_vertical"
                    android:layout_gravity="end"
                    android:includeFontPadding="true"
                    android:textSize="@dimen/display_font_size"
                    android:textColor="@color/colorCalcText"/>

            </HorizontalScrollView>

            <Spinner
                android:id="@+id/spinner_output_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spinner_vertical_margin"
                android:layout_marginBottom="@dimen/spinner_vertical_margin" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/button_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/seven"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eight"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size" />

            <Button
                android:id="@+id/button_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nine"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/button_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/four"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size" />

            <Button
                android:id="@+id/button_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/five"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size" />

            <Button
                android:id="@+id/button_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/six"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/button_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/one"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size" />

            <Button
                android:id="@+id/button_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/two"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size" />

            <Button
                android:id="@+id/button_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/three"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/button_point"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/point"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size" />

            <Button
                android:id="@+id/button_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zero"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/main_buttons_font_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>