<resources>
    <string name="app_name">FlexiCalculator</string>
    <string name="toolbar_name">FlexiCalculator</string>
    <string name="fragment_calculator">Calculate</string>
    <string name="fragment_converter">Convert</string>
    <string name="fragment_voice">Speak</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
...
