...
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:titleTextAppearance="@style/AppTheme.ToolbarStyle.Title">

                <com.saraighatsoftware.flexicalculator.CustomTabLayout
                    android:id="@+id/tabs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    style="@style/CustomTabLayout"
                    app:tabMode="fixed"
                    app:tabGravity="center"
...
